--- a/project/templates/activities.html
+++ b/project/templates/activities.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/activities.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/activities_page.css') }}" />
 
     <title>Activities</title>
     <link rel="icon" href="{{ url_for('static', filename='img/aboutus/logo.png') }}" type="image/x-icon" />
@@ -15,7 +15,7 @@
 
 <body>
     {% include 'navbar.html' %}
-    <div class="background-activities">
+    {% comment %} <div class="background-activities">
         <table>
             <section id="activities_folder">
                 <div class="activities_line">
@@ -61,8 +61,105 @@
                         </figure>
                     </div>
             </section>
-            </div>
-            {% include 'footer.html' %}
+            </div> {% endcomment %}
+
+            <div id="activities_news">
+                <div class="content_block">
+            
+                  <div class="image2">
+                    <img src="{{ url_for('static', filename='img/activities_page/activities_page_1.jpg') }}" 
+                    class="img" alt="TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?">
+                  </div>
+                  <div class="content2">
+                    <div class="block_header">
+                      <span class="text1">TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?</span>
+                    </div>
+                    <span class="text2"> Liệu bạn có biết mùa Tết của “Công dân toàn cầu” có gì khác biệt? Nếu là người dân Việt Nam chắc hẳn bạn cũng chẳng xa lạ gì với các nghi thức truyền thống như dọn dẹp, lì xì, nấu bánh chưng, tảo mộ,...
+                    </span>
+                    <div class="readmore">
+                       <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid0kH4rnxhLiHesvXGJsoscLg1qTBYNUBHfFpZtGwvXkQVVoadSEkaEHuQt729o9APRl" class="text3"> Read More</a>
+                    </div>
+                  </div>
+            
+            
+                </div>
+            
+                <div class="content_block">
+                  <div class="content2">
+                    <div class="block_header">
+                      <span class="text1">ECO WRAPUP: CÙNG TỔNG KẾT NĂM CŨ CỦA BẠN</span>
+                    </div>
+                    <span class="text2">Năm mới Quý Mão đang dần đến gõ cửa, khép lại hành trình của năm cũ và mở ra một cánh cửa mới với thật nhiều cuộc phiêu lưu đang chờ đón bạn. Hãy cùng Eco Smart Vietnam tổng kết lại năm cũ - năm con Hổ để xem liệu bạn có phải “chiến thần” sống xanh không nhé. Đừng quên khoe với chúng mình điểm số của bạn dưới phần bình luận bạn nha. Bắt đầu thôi nào.
+                    </span>
+                    <div class="readmore">
+                        < <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02eJem4sn4VZD2kk4WAvDugTStU4UMuMBXjbJ9p4D57svRWiUMjBbyZ7AbhL1rggoGl" class="text3"> Read More</a>
+                    </div>
+                  </div>
+                  <div class="image2">
+                      <img src="{{ url_for('static', filename='img/activities_page/activities_page_2.jpg') }}" 
+                      class="img" alt="">
+                  </div>
+                </div>
+            
+                <div class="content_block">
+                  <div class="image2">
+                    <img src="{{ url_for('static', filename='img/activities_page/activities_page_3.jpg') }}"
+                     class="img" alt="" class="anh">
+                  </div>
+                  <div class="content2">
+                    <div class="block_header">
+                      <span class="text1">ECO MÙA TẾT: ĂN TẾT NHƯNG VẪN SỐNG XANH?</span>
+                    </div>
+                    <span class="text2">Có lẽ đối với mọi người dân Việt Nam, mùa tết đến chính là khoảng thời gian chúng chúng ta mong chờ nhất trong suốt một năm. Đó không chỉ là những ngày sum họp gia đình, ngày gặp gỡ người thân, bạn hữu mà cũng là thời điểm thể hiện bao nhiêu tâm tư, ước muốn trong năm mới. 
+            
+                    </span>
+                    <div class="readmore">
+                        <a href="https://www.facebook.com/photo?fbid=128195530141901&set=a.107563378871783" class="text3"> Read More</a>
+                    </div>
+                  </div>
+            
+                </div>
+            
+            
+                <div class="content_block">
+            
+                  <div class="content2">
+                    <div class="block_header">
+                      <span class="text1">ECO MEME: GIẢI TRÍ CÙNG ECO SMART VIETNAM</span>
+                    </div>
+                    <span class="text2">Meme hay còn được gọi với cái tên thân thương hơn là ảnh chế là một trong những điều không thể thiếu được trong các cuộc trò chuyện giữa bạn bè, hội nhóm ngày nay. Meme giúp cho mỗi lần chitchat trở nên thú vị và hài hước hơn. Những tấm ảnh chế cũng có thể là cảm hứng cho những tràng cười bất tận sau một ngày dài mệt mỏi.
+            
+                    </span>
+                    <div class="readmore">
+                        <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02HGfZksdhgGQGhurdfsDJetKQeFuEpPsyD1F5JgUMgL31eFmqvsc2AhG4j7aZSgNXl" class="text3"> Read More</a>
+                    </div>
+                  </div>
+                  <div class="image2">
+                    <img src="{{ url_for('static', filename='img/activities_page/activities_page_4.jpg') }}" 
+                    class="img" alt="">
+                  </div>
+                </div>
+            
+            
+                <div class="content_block">
+                  <div class="image2">
+                    <img src="{{ url_for('static', filename='img/activities_page/activities_page_5.jpg') }}" 
+                    class="img" alt="">
+                  </div>
+                  <div class="content2">
+                    <div class="block_header">
+                      <span class="text1">Ready for phase 2: TAKING OFF!</span>
+                    </div>
+                    <span class="text2">#ESV #ECO #ECOSMARTVIETNAM #IMPACT
+                    </span>
+                    <div class="readmore">
+                        <a href="https://www.facebook.com/photo?fbid=126644343630353&set=a.105895305705257" class="text3"> Read More</a>
+                    </div>
+                  </div>
+            
+             
+
+ {% include 'footer.html' %}
 </body>
 
 </html>
