--- a/project/templates/slideshow.html
+++ b/project/templates/slideshow.html
@@ -1,63 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slideshow</title>
 
-    <link rel="stylesheet" href="slideshow.css" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/slideshow.css') }}"
+    />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
-    <div class="myContainer" style="
-    width: 70%;
-    margin-left: 15vw;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
-">
-        <div id="carouselMain" class="carousel slide" data-bs-ride="true">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+  <body>
+    <div class="myContainer">
+      <div id="carouselMain" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselMain"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
 
-                <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button
+            type="button"
+            data-bs-target="#carouselMain"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
 
-                <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button
+            type="button"
+            data-bs-target="#carouselMain"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
 
-                <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button
+            type="button"
+            data-bs-target="#carouselMain"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
+        </div>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="{{ url_for('static', filename='img/slideshow/1.jpg') }}"
+              class="d-block w-100"
+              alt="slide1"
+            />
+            <div class="carousel-caption d-none d-lg-block">
+              <p class="description-slide">Slide 1</p>
             </div>
-
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="{{ url_for('static', filename='img/slideshow/1.jpg') }}" class="d-block w-100" alt="slide1" />
-                    <div class="carousel-caption d-none d-lg-block">
-                        <p class="description-slide">Slide 1</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="{{ url_for('static', filename='img/slideshow/2.jpg') }}" class="d-block w-100" alt="slide2" />
-                    <div class="carousel-caption d-none d-lg-block">
-                        <p class="description-slide">Slide 2</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="{{ url_for('static', filename='img/slideshow/3.jpg') }}" class="d-block w-100" alt="slide3" />
-                    <div class="carousel-caption d-none d-lg-block">
-                        <p class="description-slide">Slide 3</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="{{ url_for('static', filename='img/slideshow/4.jpg') }}" class="d-block w-100" alt="slide4" />
-                    <div class="carousel-caption d-none d-lg-block">
-                        <p class="description-slide">Slide 4</p>
-                    </div>
-                </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="{{ url_for('static', filename='img/slideshow/2.jpg') }}"
+              class="d-block w-100"
+              alt="slide2"
+            />
+            <div class="carousel-caption d-none d-lg-block">
+              <p class="description-slide">Slide 2</p>
             </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="{{ url_for('static', filename='img/slideshow/3.jpg') }}"
+              class="d-block w-100"
+              alt="slide3"
+            />
+            <div class="carousel-caption d-none d-lg-block">
+              <p class="description-slide">Slide 3</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="{{ url_for('static', filename='img/slideshow/4.jpg') }}"
+              class="d-block w-100"
+              alt="slide4"
+            />
+            <div class="carousel-caption d-none d-lg-block">
+              <p class="description-slide">Slide 4</p>
+            </div>
+          </div>
+        </div>
 
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselMain" data-bs-slide="prev">
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselMain"
+          data-bs-slide="prev"
+        >
           <span
             class="carousel-control-prev-icon"
             id="prev-button"
@@ -65,7 +110,12 @@
           ></span>
           <span class="visually-hidden">Previous</span>
         </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselMain" data-bs-slide="next">
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselMain"
+          data-bs-slide="next"
+        >
           <span
             class="carousel-control-next-icon"
             id="next-button"
@@ -73,10 +123,13 @@
           ></span>
           <span class="visually-hidden">Next</span>
         </button>
-        </div>
+      </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
